# horbo

./: CONTRIBUTING.md  Cargo.toml  FEATURES.md  README.md  build.rs  example  horbo.yml
proto/: Cargo.toml  build.rs  messages.proto
src/: _.rs  grpc.rs  main.rs  mod.rs  server.rs
src/common/: error.rs
src/core/: mod.rs  schema.rs
src/core/application/: service_discovery.rs
src/core/domain/: data.rs  mod.rs  server.rs
src/pool/: consistent_hash.rs  mod.rs  pool.rs
src/utils/: hash.rs  mod.rs
