[workspace]
members = [
    ".",      # this crate
    "proto"   # proto crate
]

[package]
name = "ulok"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_yaml = "0.9.34"
serde = { version = "1.0", features = ["derive"] }
twox-hash = "2.1.0"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
prost = "0.14.1"
tonic = { version = "0.14.1", features = ["tls-ring"] }
ulid = "1.0"
tonic-prost = "0.14.1"

[build-dependencies]
tonic-prost-build = "0.14.1"
